<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_videosettings_title" android:key="@string/pref_videosettings_key">
        <CheckBoxPreference android:title="@string/pref_videocall_title" android:key="@string/pref_videocall_key" android:defaultValue="@string/pref_videocall_default" android:dialogTitle="@string/pref_videocall_dlg" />
        <CheckBoxPreference android:title="@string/pref_screencapture_title" android:key="@string/pref_screencapture_key" android:defaultValue="@string/pref_screencapture_default" />
        <CheckBoxPreference android:title="@string/pref_camera2_title" android:key="@string/pref_camera2_key" android:defaultValue="@string/pref_camera2_default" />
        <ListPreference android:entries="@array/videoResolutions" android:title="@string/pref_resolution_title" android:key="@string/pref_resolution_key" android:defaultValue="@string/pref_resolution_default" android:dialogTitle="@string/pref_resolution_dlg" android:entryValues="@array/videoResolutionsValues" />
        <ListPreference android:entries="@array/cameraFps" android:title="@string/pref_fps_title" android:key="@string/pref_fps_key" android:defaultValue="@string/pref_fps_default" android:dialogTitle="@string/pref_fps_dlg" android:entryValues="@array/cameraFps" />
        <CheckBoxPreference android:title="@string/pref_capturequalityslider_title" android:key="@string/pref_capturequalityslider_key" android:defaultValue="@string/pref_capturequalityslider_default" android:dialogTitle="@string/pref_capturequalityslider_dlg" />
        <ListPreference android:entries="@array/startBitrate" android:title="@string/pref_maxvideobitrate_title" android:key="@string/pref_maxvideobitrate_key" android:defaultValue="@string/pref_maxvideobitrate_default" android:dialogTitle="@string/pref_maxvideobitrate_dlg" android:entryValues="@array/startBitrate" />
        <EditTextPreference android:title="@string/pref_maxvideobitratevalue_title" android:key="@string/pref_maxvideobitratevalue_key" android:defaultValue="@string/pref_maxvideobitratevalue_default" android:dialogTitle="@string/pref_maxvideobitratevalue_dlg" android:inputType="number" />
        <ListPreference android:entries="@array/videoCodecs" android:title="@string/pref_videocodec_title" android:key="@string/pref_videocodec_key" android:defaultValue="@string/pref_videocodec_default" android:dialogTitle="@string/pref_videocodec_dlg" android:entryValues="@array/videoCodecs" />
        <CheckBoxPreference android:title="@string/pref_hwcodec_title" android:key="@string/pref_hwcodec_key" android:defaultValue="@string/pref_hwcodec_default" android:dialogTitle="@string/pref_hwcodec_dlg" />
        <CheckBoxPreference android:title="@string/pref_capturetotexture_title" android:key="@string/pref_capturetotexture_key" android:defaultValue="@string/pref_capturetotexture_default" android:dialogTitle="@string/pref_capturetotexture_dlg" />
        <CheckBoxPreference android:title="@string/pref_flexfec_title" android:key="@string/pref_flexfec_key" android:defaultValue="@string/pref_flexfec_default" android:dialogTitle="@string/pref_flexfec_dlg" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_audiosettings_title" android:key="@string/pref_audiosettings_key">
        <ListPreference android:entries="@array/startBitrate" android:title="@string/pref_startaudiobitrate_title" android:key="@string/pref_startaudiobitrate_key" android:defaultValue="@string/pref_startaudiobitrate_default" android:dialogTitle="@string/pref_startaudiobitrate_dlg" android:entryValues="@array/startBitrate" />
        <EditTextPreference android:title="@string/pref_startaudiobitratevalue_title" android:key="@string/pref_startaudiobitratevalue_key" android:defaultValue="@string/pref_startaudiobitratevalue_default" android:dialogTitle="@string/pref_startaudiobitratevalue_dlg" android:inputType="number" />
        <ListPreference android:entries="@array/audioCodecs" android:title="@string/pref_audiocodec_title" android:key="@string/pref_audiocodec_key" android:defaultValue="@string/pref_audiocodec_default" android:dialogTitle="@string/pref_audiocodec_dlg" android:entryValues="@array/audioCodecs" />
        <CheckBoxPreference android:title="@string/pref_noaudioprocessing_title" android:key="@string/pref_noaudioprocessing_key" android:defaultValue="@string/pref_noaudioprocessing_default" android:dialogTitle="@string/pref_noaudioprocessing_dlg" />
        <CheckBoxPreference android:title="@string/pref_aecdump_title" android:key="@string/pref_aecdump_key" android:defaultValue="@string/pref_aecdump_default" android:dialogTitle="@string/pref_aecdump_dlg" />
        <CheckBoxPreference android:title="@string/pref_opensles_title" android:key="@string/pref_opensles_key" android:defaultValue="@string/pref_opensles_default" android:dialogTitle="@string/pref_opensles_dlg" />
        <CheckBoxPreference android:title="@string/pref_disable_built_in_aec_title" android:key="@string/pref_disable_built_in_aec_key" android:defaultValue="@string/pref_disable_built_in_aec_default" android:dialogTitle="@string/pref_disable_built_in_aec_dlg" />
        <CheckBoxPreference android:title="@string/pref_disable_built_in_agc_title" android:key="@string/pref_disable_built_in_agc_key" android:defaultValue="@string/pref_disable_built_in_agc_default" android:dialogTitle="@string/pref_disable_built_in_agc_dlg" />
        <CheckBoxPreference android:title="@string/pref_disable_built_in_ns_title" android:key="@string/pref_disable_built_in_ns_key" android:defaultValue="@string/pref_disable_built_in_ns_default" android:dialogTitle="@string/pref_disable_built_in_ns_dlg" />
        <CheckBoxPreference android:title="@string/pref_enable_level_control_title" android:key="@string/pref_enable_level_control_key" android:defaultValue="@string/pref_enable_level_control_default" />
        <ListPreference android:entries="@array/speakerphone" android:title="@string/pref_speakerphone_title" android:key="@string/pref_speakerphone_key" android:defaultValue="@string/pref_speakerphone_default" android:dialogTitle="@string/pref_speakerphone_dlg" android:entryValues="@array/speakerphoneValues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_datasettings_title" android:key="@string/pref_datasettings_key">
        <CheckBoxPreference android:title="@string/pref_enable_datachannel_title" android:key="@string/pref_enable_datachannel_key" android:defaultValue="@string/pref_enable_datachannel_default" />
        <CheckBoxPreference android:title="@string/pref_ordered_title" android:key="@string/pref_ordered_key" android:defaultValue="@string/pref_ordered_default" />
        <EditTextPreference android:title="@string/pref_data_protocol_title" android:key="@string/pref_data_protocol_key" android:defaultValue="@string/pref_data_protocol_default" android:dialogTitle="@string/pref_data_protocol_dlg" android:inputType="text" />
        <CheckBoxPreference android:title="@string/pref_negotiated_title" android:key="@string/pref_negotiated_key" android:defaultValue="@string/pref_negotiated_default" />
        <EditTextPreference android:title="@string/pref_max_retransmit_time_ms_title" android:key="@string/pref_max_retransmit_time_ms_key" android:defaultValue="@string/pref_max_retransmit_time_ms_default" android:dialogTitle="@string/pref_max_retransmit_time_ms_dlg" android:inputType="number" />
        <EditTextPreference android:title="@string/pref_max_retransmits_title" android:key="@string/pref_max_retransmits_key" android:defaultValue="@string/pref_max_retransmits_default" android:dialogTitle="@string/pref_max_retransmits_dlg" android:inputType="number" />
        <EditTextPreference android:title="@string/pref_data_id_title" android:key="@string/pref_data_id_key" android:defaultValue="@string/pref_data_id_default" android:dialogTitle="@string/pref_data_id_dlg" android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_miscsettings_title" android:key="@string/pref_miscsettings_key">
        <EditTextPreference android:title="@string/pref_room_server_url_title" android:key="@string/pref_room_server_url_key" android:defaultValue="@string/pref_room_server_url_default" android:dialogTitle="@string/pref_room_server_url_dlg" android:inputType="text" />
        <CheckBoxPreference android:title="@string/pref_displayhud_title" android:key="@string/pref_displayhud_key" android:defaultValue="@string/pref_displayhud_default" android:dialogTitle="@string/pref_displayhud_dlg" />
        <CheckBoxPreference android:title="@string/pref_tracing_title" android:key="@string/pref_tracing_key" android:defaultValue="@string/pref_tracing_default" android:dialogTitle="@string/pref_tracing_dlg" />
    </PreferenceCategory>
</PreferenceScreen>