<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:id="@id/contact_name_call" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_above="@id/buttons_call_container" android:layout_centerHorizontal="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/buttons_call_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:layout_above="@id/capture_format_text_call" android:layout_centerHorizontal="true" android:layout_alignWithParentIfMissing="true">
        <ImageButton android:id="@id/button_call_disconnect" android:background="@drawable/disconnect" android:layout_width="48.0dip" android:layout_height="48.0dip" android:contentDescription="@string/disconnect_call" />
        <ImageButton android:id="@id/button_call_switch_camera" android:background="@android:drawable/ic_menu_camera" android:layout_width="48.0dip" android:layout_height="48.0dip" android:contentDescription="@string/switch_camera" />
        <ImageButton android:id="@id/button_call_scaling_mode" android:background="@drawable/ic_action_return_from_full_screen" android:layout_width="48.0dip" android:layout_height="48.0dip" android:contentDescription="@string/disconnect_call" />
        <ImageButton android:id="@id/button_call_toggle_mic" android:background="@android:drawable/ic_btn_speak_now" android:layout_width="48.0dip" android:layout_height="48.0dip" android:contentDescription="@string/toggle_mic" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:id="@id/capture_format_text_call" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/capture_format_change_text" android:layout_above="@id/capture_format_slider_call" android:layout_centerHorizontal="true" />
    <SeekBar android:id="@id/capture_format_slider_call" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:progress="50" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>